--- a/project/Makefile
+++ b/project/Makefile
@@ -5,8 +5,7 @@ CFLAGS=-I. `net-snmp-config --cflags`
 DLFLAGS=-fPIC -shared
 
 OBJECT=AgentPluginObject
-mkfile_path := $(abspath $(lastword $(MAKEFILE_LIST)))
-current_dir := $(notdir $(patsubst %/,%,$(dir $(mkfile_path))))
+current_dir = $(shell pwd)
 MIB=XABRAM00-MIB
 
 NO_COLOR=\033[0m'
@@ -31,10 +30,10 @@ deploy:
 	snmpset localhost UCD-DLMOD-MIB::dlmodStatus.3 i create
 	snmpset localhost UCD-DLMOD-MIB::dlmodStatus.4 i create
 
-	snmpset localhost UCD-DLMOD-MIB::dlmodName.1 s "nstAgentPluginLogin" UCD-DLMOD-MIB::dlmodPath.1 s "$(current_dir)/$(OBJECT).so"
-	snmpset localhost UCD-DLMOD-MIB::dlmodName.2 s "nstAgentPluginTimeInRFC3339" UCD-DLMOD-MIB::dlmodPath.2 s "$(current_dir)/$(OBJECT).so"
-	snmpset localhost UCD-DLMOD-MIB::dlmodName.3 s "nstAgentPluginInt32" UCD-DLMOD-MIB::dlmodPath.3 s "$(current_dir)/$(OBJECT).so"
-	snmpset localhost UCD-DLMOD-MIB::dlmodName.4 s "nstAgentPluginReleaseVersion" UCD-DLMOD-MIB::dlmodPath.4 s "$(current_dir)/$(OBJECT).so"
+	snmpset localhost UCD-DLMOD-MIB::dlmodName.1 s "nstAgentPluginLogin" UCD-DLMOD-MIB::dlmodPath.1 s "/$(current_dir)/$(OBJECT).so"
+	snmpset localhost UCD-DLMOD-MIB::dlmodName.2 s "nstAgentPluginTimeInRFC3339" UCD-DLMOD-MIB::dlmodPath.2 s "/$(current_dir)/$(OBJECT).so"
+	snmpset localhost UCD-DLMOD-MIB::dlmodName.3 s "nstAgentPluginInt32" UCD-DLMOD-MIB::dlmodPath.3 s "/$(current_dir)/$(OBJECT).so"
+	snmpset localhost UCD-DLMOD-MIB::dlmodName.4 s "nstAgentPluginReleaseVersion" UCD-DLMOD-MIB::dlmodPath.4 s "/$(current_dir)/$(OBJECT).so"
 
 	snmpset localhost UCD-DLMOD-MIB::dlmodStatus.1 i load
 	snmpset localhost UCD-DLMOD-MIB::dlmodStatus.2 i load
