--- a/project/Makefile
+++ b/project/Makefile
@@ -30,9 +30,9 @@ deploy:
 	snmpset localhost UCD-DLMOD-MIB::dlmodStatus.3 i create
 	snmpset localhost UCD-DLMOD-MIB::dlmodStatus.4 i create
 
-	snmpset localhost UCD-DLMOD-MIB::dlmodName.1 s "nstAgentPluginLogin" UCD-DLMOD-MIB::dlmodPath.1 s "/$(current_dir)/$(OBJECT).so"
+	snmpset localhost UCD-DLMOD-MIB::dlmodName.1 s "nstAgentPluginLogin" UCD-DLMOD-MIB::dlmodPath.1 s "$(current_dir)/$(OBJECT).so"
 	snmpset localhost UCD-DLMOD-MIB::dlmodName.2 s "nstAgentPluginTimeInRFC3339" UCD-DLMOD-MIB::dlmodPath.2 s "/$(current_dir)/$(OBJECT).so"
-	snmpset localhost UCD-DLMOD-MIB::dlmodName.3 s "nstAgentPluginInt32" UCD-DLMOD-MIB::dlmodPath.3 s "/$(current_dir)/$(OBJECT).so"
+	snmpset localhost UCD-DLMOD-MIB::dlmodName.3 s "nstAgentPluginInt32" UCD-DLMOD-MIB::dlmodPath.3 s "$(current_dir)/$(OBJECT).so"
 	snmpset localhost UCD-DLMOD-MIB::dlmodName.4 s "nstAgentPluginReleaseVersion" UCD-DLMOD-MIB::dlmodPath.4 s "/$(current_dir)/$(OBJECT).so"
 
 	snmpset localhost UCD-DLMOD-MIB::dlmodStatus.1 i load
@@ -54,10 +54,12 @@ test:
 	snmpget localhost XABRAM00-MIB::nstAgentPluginLogin.0
 	snmpget localhost XABRAM00-MIB::nstAgentPluginTimeInRFC3339.0
 	snmpget localhost XABRAM00-MIB::nstAgentPluginInt32.0
+	snmpset localhost XABRAM00-MIB::nstAgentPluginInt32.0 i 1234
 	snmpget localhost XABRAM00-MIB::nstAgentPluginReleaseVersion.0
 	snmpget localhost .1.3.6.1.3.22.1.0
 	snmpget localhost .1.3.6.1.3.22.2.0
 	snmpget localhost .1.3.6.1.3.22.3.0
+	snmpset localhost .1.3.6.1.3.22.3.0 i 666
 	snmpget localhost .1.3.6.1.3.22.4.0
 	@echo -e $(OK_COLOR)REMOTE OK TESTS passed $(NO_COLOR)
 	@echo -e $(ERROR_COLOR)REMOTE FAILED TESTS (all should fail) $(NO_COLOR)
@@ -76,31 +78,35 @@ test:
 	@echo -e $(ERROR_COLOR)REMOTE FAILED TESTS (all should fail) $(NO_COLOR)
 
 remote-test:
+ifdef IP
 	@echo -e $(OK_COLOR)REMOTE OK TESTS (all should pass) $(NO_COLOR)
-	snmpget -v 2c -c public 192.168.56.4 XABRAM00-MIB::nstAgentPluginLogin.0         
-	snmpget -v 2c -c public 192.168.56.4 XABRAM00-MIB::nstAgentPluginTimeInRFC3339.0 
-	snmpget -v 2c -c public 192.168.56.4 XABRAM00-MIB::nstAgentPluginInt32.0         
-	snmpset -v 2c -c public 192.168.56.4 XABRAM00-MIB::nstAgentPluginInt32.0 i 1234  
-	snmpget -v 2c -c public 192.168.56.4 XABRAM00-MIB::nstAgentPluginInt32.0         
-	snmpget -v 2c -c public 192.168.56.4 XABRAM00-MIB::nstAgentPluginReleaseVersion.0
-	snmpget -v 2c -c public 192.168.56.4 .1.3.6.1.3.22.1.0 	  
-	snmpget -v 2c -c public 192.168.56.4 .1.3.6.1.3.22.2.0    
-	snmpget -v 2c -c public 192.168.56.4 .1.3.6.1.3.22.3.0    
-	snmpset -v 2c -c public 192.168.56.4 .1.3.6.1.3.22.3.0 i 0
-	snmpget -v 2c -c public 192.168.56.4 .1.3.6.1.3.22.3.0    
-	snmpget -v 2c -c public 192.168.56.4 .1.3.6.1.3.22.4.0    
+	snmpget -v 2c -c public ${IP} XABRAM00-MIB::nstAgentPluginLogin.0         
+	snmpget -v 2c -c public ${IP} XABRAM00-MIB::nstAgentPluginTimeInRFC3339.0 
+	snmpget -v 2c -c public ${IP} XABRAM00-MIB::nstAgentPluginInt32.0         
+	snmpset -v 2c -c public ${IP} XABRAM00-MIB::nstAgentPluginInt32.0 i 1234  
+	snmpget -v 2c -c public ${IP} XABRAM00-MIB::nstAgentPluginInt32.0         
+	snmpget -v 2c -c public ${IP} XABRAM00-MIB::nstAgentPluginReleaseVersion.0
+	snmpget -v 2c -c public ${IP} .1.3.6.1.3.22.1.0 	  
+	snmpget -v 2c -c public ${IP} .1.3.6.1.3.22.2.0    
+	snmpget -v 2c -c public ${IP} .1.3.6.1.3.22.3.0    
+	snmpset -v 2c -c public ${IP} .1.3.6.1.3.22.3.0 i 666
+	snmpget -v 2c -c public ${IP} .1.3.6.1.3.22.3.0    
+	snmpget -v 2c -c public ${IP} .1.3.6.1.3.22.4.0    
 	@echo -e $(OK_COLOR)REMOTE OK TESTS passed $(NO_COLOR)
 	@echo -e $(ERROR_COLOR)REMOTE FAILED TESTS (all should fail) $(NO_COLOR)
 	@echo -e $(TEST_COLOR)notWritable tests $(NO_COLOR)
-	snmpset -v 2c -c public 192.168.56.4 XABRAM00-MIB::nstAgentPluginLogin.0 s "TEST"          || true        
-	snmpset -v 2c -c public 192.168.56.4 XABRAM00-MIB::nstAgentPluginTimeInRFC3339.0 s "TEST"  || true        
-	snmpset -v 2c -c public 192.168.56.4 XABRAM00-MIB::nstAgentPluginReleaseVersion.0 s "TEST" || true
-	snmpset -v 2c -c public 192.168.56.4 .1.3.6.1.3.22.1.0 s "TEST" || true 	  
-	snmpset -v 2c -c public 192.168.56.4 .1.3.6.1.3.22.2.0 s "TEST" || true   
-	snmpset -v 2c -c public 192.168.56.4 .1.3.6.1.3.22.4.0 s "TEST" || true    
+	snmpset -v 2c -c public ${IP} XABRAM00-MIB::nstAgentPluginLogin.0 s "TEST"          || true        
+	snmpset -v 2c -c public ${IP} XABRAM00-MIB::nstAgentPluginTimeInRFC3339.0 s "TEST"  || true        
+	snmpset -v 2c -c public ${IP} XABRAM00-MIB::nstAgentPluginReleaseVersion.0 s "TEST" || true
+	snmpset -v 2c -c public ${IP} .1.3.6.1.3.22.1.0 s "TEST" || true 	  
+	snmpset -v 2c -c public ${IP} .1.3.6.1.3.22.2.0 s "TEST" || true   
+	snmpset -v 2c -c public ${IP} .1.3.6.1.3.22.4.0 s "TEST" || true    
 	@echo -e $(TEST_COLOR)Error value tests $(NO_COLOR)
-	snmpset -v 2c -c public 192.168.56.4 XABRAM00-MIB::nstAgentPluginInt32.0 s "TEST"      || true
-	snmpset -v 2c -c public 192.168.56.4 XABRAM00-MIB::nstAgentPluginInt32.0 i 2147483648  || true
-	snmpset -v 2c -c public 192.168.56.4 XABRAM00-MIB::nstAgentPluginInt32.0 i -2147483649 || true
-	snmpset -v 2c -c public 192.168.56.4 .1.3.6.1.3.22.3.0 s "TEST"      || true
+	snmpset -v 2c -c public ${IP} XABRAM00-MIB::nstAgentPluginInt32.0 s "TEST"      || true
+	snmpset -v 2c -c public ${IP} XABRAM00-MIB::nstAgentPluginInt32.0 i 2147483648  || true
+	snmpset -v 2c -c public ${IP} XABRAM00-MIB::nstAgentPluginInt32.0 i -2147483649 || true
+	snmpset -v 2c -c public ${IP} .1.3.6.1.3.22.3.0 s "TEST"      || true
 	@echo -e $(ERROR_COLOR)REMOTE FAILED TESTS (all should fail) $(NO_COLOR)
+else
+	@echo 'please, define: IP='<ip>'
+endif
