--- a/project/Makefile
+++ b/project/Makefile
@@ -25,42 +25,29 @@ server:
 	snmpd -f -L -DnstAgentPluginLogin -DnstAgentPluginTimeInRFC3339 -DnstAgentPluginInt32 -DnstAgentPluginReleaseVersion,dlmod
 
 deploy:
-	snmpset localhost UCD-DLMOD-MIB::dlmodStatus.1 i create
-	snmpset localhost UCD-DLMOD-MIB::dlmodStatus.2 i create
-	snmpset localhost UCD-DLMOD-MIB::dlmodStatus.3 i create
-	snmpset localhost UCD-DLMOD-MIB::dlmodStatus.4 i create
+	snmpset localhost UCD-DLMOD-MIB::dlmodStatus.1 i create UCD-DLMOD-MIB::dlmodStatus.2 i create UCD-DLMOD-MIB::dlmodStatus.3 i create UCD-DLMOD-MIB::dlmodStatus.4 i create
 
 	snmpset localhost UCD-DLMOD-MIB::dlmodName.1 s "nstAgentPluginLogin" UCD-DLMOD-MIB::dlmodPath.1 s "$(current_dir)/$(OBJECT).so"
 	snmpset localhost UCD-DLMOD-MIB::dlmodName.2 s "nstAgentPluginTimeInRFC3339" UCD-DLMOD-MIB::dlmodPath.2 s "/$(current_dir)/$(OBJECT).so"
 	snmpset localhost UCD-DLMOD-MIB::dlmodName.3 s "nstAgentPluginInt32" UCD-DLMOD-MIB::dlmodPath.3 s "$(current_dir)/$(OBJECT).so"
 	snmpset localhost UCD-DLMOD-MIB::dlmodName.4 s "nstAgentPluginReleaseVersion" UCD-DLMOD-MIB::dlmodPath.4 s "/$(current_dir)/$(OBJECT).so"
 
-	snmpset localhost UCD-DLMOD-MIB::dlmodStatus.1 i load
-	snmpset localhost UCD-DLMOD-MIB::dlmodStatus.2 i load
-	snmpset localhost UCD-DLMOD-MIB::dlmodStatus.3 i load
-	snmpset localhost UCD-DLMOD-MIB::dlmodStatus.4 i load
+	snmpset localhost UCD-DLMOD-MIB::dlmodStatus.1 i load localhost UCD-DLMOD-MIB::dlmodStatus.2 i load localhost UCD-DLMOD-MIB::dlmodStatus.3 i load localhost UCD-DLMOD-MIB::dlmodStatus.4 i load
 
 	snmptable localhost UCD-DLMOD-MIB::dlmodTable
 
 
 undeploy:
-	snmpset localhost UCD-DLMOD-MIB::dlmodStatus.1 i unload
-	snmpset localhost UCD-DLMOD-MIB::dlmodStatus.2 i unload
-	snmpset localhost UCD-DLMOD-MIB::dlmodStatus.3 i unload
-	snmpset localhost UCD-DLMOD-MIB::dlmodStatus.4 i unload
+	snmpset localhost UCD-DLMOD-MIB::dlmodStatus.1 i unload localhost UCD-DLMOD-MIB::dlmodStatus.2 i unload localhost UCD-DLMOD-MIB::dlmodStatus.3 i unload localhost UCD-DLMOD-MIB::dlmodStatus.4 i unload
 
 test:
 	@echo -e $(OK_COLOR)LOCAL OK TESTS (all should pass) $(NO_COLOR)
-	snmpget localhost XABRAM00-MIB::nstAgentPluginLogin.0
-	snmpget localhost XABRAM00-MIB::nstAgentPluginTimeInRFC3339.0
-	snmpget localhost XABRAM00-MIB::nstAgentPluginInt32.0
+	snmpget localhost XABRAM00-MIB::nstAgentPluginLogin.0 XABRAM00-MIB::nstAgentPluginTimeInRFC3339.0 XABRAM00-MIB::nstAgentPluginInt32.0 XABRAM00-MIB::nstAgentPluginReleaseVersion.0
 	snmpset localhost XABRAM00-MIB::nstAgentPluginInt32.0 i 1234
-	snmpget localhost XABRAM00-MIB::nstAgentPluginReleaseVersion.0
-	snmpget localhost .1.3.6.1.3.22.1.0
-	snmpget localhost .1.3.6.1.3.22.2.0
-	snmpget localhost .1.3.6.1.3.22.3.0
+	snmpget localhost XABRAM00-MIB::nstAgentPluginInt32.0
+	snmpget localhost .1.3.6.1.3.22.1.0 .1.3.6.1.3.22.2.0 .1.3.6.1.3.22.3.0 .1.3.6.1.3.22.4.0
 	snmpset localhost .1.3.6.1.3.22.3.0 i 666
-	snmpget localhost .1.3.6.1.3.22.4.0
+	snmpget localhost .1.3.6.1.3.22.3.0
 	@echo -e $(OK_COLOR)REMOTE OK TESTS passed $(NO_COLOR)
 	@echo -e $(ERROR_COLOR)REMOTE FAILED TESTS (all should fail) $(NO_COLOR)
 	@echo -e $(TEST_COLOR)notWritable tests $(NO_COLOR)
@@ -80,18 +67,12 @@ test:
 remote-test:
 ifdef IP
 	@echo -e $(OK_COLOR)REMOTE OK TESTS (all should pass) $(NO_COLOR)
-	snmpget -v 2c -c public ${IP} XABRAM00-MIB::nstAgentPluginLogin.0         
-	snmpget -v 2c -c public ${IP} XABRAM00-MIB::nstAgentPluginTimeInRFC3339.0 
-	snmpget -v 2c -c public ${IP} XABRAM00-MIB::nstAgentPluginInt32.0         
+	snmpget -v 2c -c public ${IP} XABRAM00-MIB::nstAgentPluginLogin.0 XABRAM00-MIB::nstAgentPluginTimeInRFC3339.0 XABRAM00-MIB::nstAgentPluginInt32.0 XABRAM00-MIB::nstAgentPluginReleaseVersion.0      
 	snmpset -v 2c -c public ${IP} XABRAM00-MIB::nstAgentPluginInt32.0 i 1234  
 	snmpget -v 2c -c public ${IP} XABRAM00-MIB::nstAgentPluginInt32.0         
-	snmpget -v 2c -c public ${IP} XABRAM00-MIB::nstAgentPluginReleaseVersion.0
-	snmpget -v 2c -c public ${IP} .1.3.6.1.3.22.1.0 	  
-	snmpget -v 2c -c public ${IP} .1.3.6.1.3.22.2.0    
-	snmpget -v 2c -c public ${IP} .1.3.6.1.3.22.3.0    
+	snmpget -v 2c -c public ${IP} .1.3.6.1.3.22.1.0 .1.3.6.1.3.22.2.0 .1.3.6.1.3.22.3.0 .1.3.6.1.3.22.4.0
 	snmpset -v 2c -c public ${IP} .1.3.6.1.3.22.3.0 i 666
-	snmpget -v 2c -c public ${IP} .1.3.6.1.3.22.3.0    
-	snmpget -v 2c -c public ${IP} .1.3.6.1.3.22.4.0    
+	snmpget -v 2c -c public ${IP} .1.3.6.1.3.22.3.0
 	@echo -e $(OK_COLOR)REMOTE OK TESTS passed $(NO_COLOR)
 	@echo -e $(ERROR_COLOR)REMOTE FAILED TESTS (all should fail) $(NO_COLOR)
 	@echo -e $(TEST_COLOR)notWritable tests $(NO_COLOR)
@@ -108,5 +89,5 @@ ifdef IP
 	snmpset -v 2c -c public ${IP} .1.3.6.1.3.22.3.0 s "TEST"      || true
 	@echo -e $(ERROR_COLOR)REMOTE FAILED TESTS (all should fail) $(NO_COLOR)
 else
-	@echo 'please, define: IP='<ip>'
+	@echo 'please, define: IP="<ip>"'
 endif
